fix: update container styles and adjust text colors for improved visibility

--- a/style.css
+++ b/style.css
@@ -7,19 +7,20 @@
    }
 
  .container {
-   border: 2px solid black;
-   width: 250px;
+    width: 250px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   padding: 1rem;
+   padding: 1.5rem;
    border-radius: 10px;
+   font-size: 15px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
      rgba(0, 0, 0, 0.12) 0px -12px 30px,
      rgba(0, 0, 0, 0.12) 0px 4px 6px,
      rgba(0, 0, 0, 0.17) 0px 12px 13px,
      rgba(0, 0, 0, 0.09) 0px -3px 5px;
+     color: black;
  }
 
  .container p {
@@ -58,13 +59,13 @@
  }
 
  .sparkle {
-   fill: #AAAAAA;
+   fill: #ebe9e9;
    transition: all 800ms ease;
  }
 
  .text {
    font-weight: 600;
-   color: #AAAAAA;
+   color: #ebe9e9;
    font-size: medium;
  }
 
